# tools/gimo_server/mcp_bridge/manifest.py
@@ -14,11 +14,6 @@ MANIFEST = [   {   'description': 'Health Info Route',
         'name': 'ops_openapi_ops_openapi_get',
         'params': [],
         'path': '/ops/openapi'},
-    {   'description': 'Get Ui Status',
-        'method': 'GET',
-        'name': 'get_ui_status_ui_status_get',
-        'params': [],
-        'path': '/ui/status'},
     {   'description': 'Get Ui Hardware',
         'method': 'GET',
         'name': 'get_ui_hardware_ui_hardware_get',
